# shelly

./: .gitignore  BASH_SUPPORT_ADDED.md  Cargo.toml  Dockerfile.bash  Dockerfile.devcontainer  Dockerfile.fish  Dockerfile.zsh  Makefile  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  go.mod  shellai.yaml.example
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cmd/shelly/: main.go
docs/: phase_1_mvp_plan.md  progress.md  session.md  test_scenarios.md
docs/superpowers/: progress.md
examples/: basic_plugin.rs
internal/agents/: registry.go  standard_commands.go  standard_commands_test.go
internal/context/: analyzer.go  analyzer_test.go
internal/llm/: client.go
internal/shell/: bash_completion.go  fish_completion.go  zsh_completion.go
internal/starship/: plugin.go
pkg/shelly/: error.go  suggestion.go
src/: lib.rs  main.rs
src/ai/: mod.rs
src/ai_core/: decision.rs  engine.rs  mod.rs  prompt.rs
src/bash/: mod.rs
src/cli/: mod.rs
src/commands/: ai_config.rs  context.rs  history.rs  install.rs  mod.rs
src/config/: mod.rs
src/core/: mod.rs  plugin.rs  types.rs
src/errors/: mod.rs
src/fish/: mod.rs
src/history/: mod.rs
src/hooks/: bash.rs  fish.rs  mod.rs  zsh.rs
src/plugin/: mock_plugin.rs  mod.rs
src/smart_history/: entry.rs  history.rs  mod.rs  rank.rs
src/starship/: mod.rs
src/zsh/: mod.rs
tests/: ai_and_history_tests.rs  integration_tests.rs
tests/bash/: test-bash-completions.sh
tests/fish/: test-fish-completions.fish
tests/integration/: run-all-tests.sh
tests/zsh/: test-zsh-completions.sh
(+6 files in other folders)
